# AFLplusplus

./: .gitmodules  GNUmakefile.llvm
include/: config.h  envs.h
instrumentation/: afl-compiler-rt.o.c  afl-llvm-pass.so.cc
src/: afl-cc.c
utils/: README.md
utils/optimin/: README.md
utils/optimin/src/: OptiMin.cpp  ProgressBar.h
utils/optmin/: CMakeLists.txt
utils/optmin/src/: CMakeLists.txt  OptiMin.cpp  ProgressBar.h  optimin.cpp
